# state-machines-rs

./: .gitignore  .release-please-manifest.json  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
examples/async_patterns/: Cargo.toml
examples/async_patterns/src/: main.rs
examples/basic_transitions/: Cargo.toml
examples/basic_transitions/src/: main.rs
examples/callbacks_lifecycle/: Cargo.toml
examples/callbacks_lifecycle/src/: main.rs
examples/dynamic_dispatch_when/: Cargo.toml
examples/dynamic_dispatch_when/src/: main.rs
examples/guards_and_validation/: Cargo.toml
examples/guards_and_validation/src/: main.rs
examples/hierarchical_thinking/: Cargo.toml
examples/hierarchical_thinking/src/: main.rs
examples/no_std_flight/: Cargo.toml
examples/no_std_flight/src/: lib.rs
state-machines/: CHANGELOG.md  Cargo.toml  README.md
state-machines-core/: CHANGELOG.md  Cargo.toml
state-machines-core/src/: lib.rs
state-machines-macro/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
state-machines-macro/src/: codegen.rs  lib.rs  parser.rs  types.rs  validation.rs
state-machines-macro/src/codegen/: callbacks.rs  dynamic.rs  event.rs  mod.rs  storage.rs  typestate.rs  utils.rs
state-machines/benches/: typestate_transitions.rs
state-machines/src/: lib.rs
state-machines/tests/: around_callbacks.rs  async_machine.rs  basic.rs  concrete_context.rs  dynamic_dispatch.rs  spaceship_actions.rs  spaceship_actions_async.rs  spaceship_callbacks.rs  spaceship_features.rs  spaceship_hierarchy.rs  spaceship_payload.rs  spaceship_unless.rs  state_data_accessors.rs
state_machines/: Cargo.toml
state_machines/src/: lib.rs
state_machines/tests/: async_machine.rs  basic.rs  spaceship_callbacks.rs  spaceship_features.rs  spaceship_unless.rs
state_machines_core/: Cargo.toml
state_machines_core/src/: lib.rs
state_machines_macro/: Cargo.toml
state_machines_macro/src/: lib.rs
