[package]
name = "state-machines-macro"
version = "0.6.0"
edition = "2024"
authors = ["Abdelkader Boudih <terminale@gmail.com>"]
description = "Procedural macros for the state-machines library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/state-machines/state-machines-rs"
homepage = "https://github.com/state-machines/state-machines-rs"
documentation = "https://docs.rs/state-machines-macro"
keywords = ["state-machine", "macro", "fsm"]
categories = ["rust-patterns"]
include = ["src/**/*", "Cargo.toml", "../README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }
state-machines-core = { version = "0.6.0", path = "../state-machines-core" }

[features]
default = []
dynamic = []
