[package]
name = "state-machines"
version = "0.1.1"
edition = "2024"
authors = ["Abdelkader Boudih <terminale@gmail.com>"]
description = "Type-safe state machines with hierarchical states, guards, callbacks, and async support - Rust port of Ruby's state_machines gem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/state-machines/state-machines-rs"
homepage = "https://github.com/state-machines/state-machines-rs"
documentation = "https://docs.rs/state-machines"
keywords = ["state-machine", "fsm", "async", "no-std", "embedded"]
categories = ["rust-patterns", "asynchronous", "embedded", "no-std"]
readme = "../README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[dependencies]
state-machines-core = { version = "0.1.1", path = "../state-machines-core" }
state-machines-macro = { version = "0.1.1", path = "../state-machines-macro" }

[dev-dependencies]
pollster = "0.4"
criterion = "0.5"

[[bench]]
name = "typestate_transitions"
harness = false

[features]
default = []
typestate = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
